# upload_file_rs

./: .env  Cargo.toml  README.md  build_script.sh  dfx.json  package-lock.json  package.json
scripts/: gen_can_test_interface.sh  tests.sh
src/file_scaling_manager/: Cargo.toml
src/file_scaling_manager/src/: canister_instantiation.rs  lib.rs  scaling.rs
src/file_storage/: Cargo.toml  file_storage.did
src/file_storage/src/: candid_file_generator.rs  file.rs  lib.rs  memory.rs  types.rs  utils.rs
src/storage/: Cargo.toml  storage.did
src/storage/src/: asset_handler.rs  candid_file_generator.rs  chunk_handler.rs  memory.rs  types.rs  utils.rs
src/upload_file_rs_backend/: Cargo.toml
tests/: file_storage.test.cjs  storage.test.cjs  utils.cjs
