[package]
name = "file_storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8.4"
ciborium = "0.2.1"
crc32fast = "1.3.2"
ic-cdk = "0.9.2"
ic-cdk-macros = "0.6.10"
ic-stable-structures = "0.5.5"
serde = "1.0.163"